--- a/index.html
+++ b/index.html
@@ -15,50 +15,24 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-   <h1>Portfolio of Tinothy Lewis</h1> 
-   <h2>I'm a Digital Strategist</h2>
-   <hr />
+
+<div class="container"> 
+    <header class="d-flex justify-content-center py-3"> 
+        <ul class="nav nav-pills"> 
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li> 
+            <li class="nav-item"><a href="#" class="nav-link">Features</a></li> 
+            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li> 
+            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li> 
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li> 
+        </ul> </header> </div>
+    
+
 <div class="px-4 py-5 my-5 text-center"> 
     <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> 
-    <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1> 
+    <h1 class="display-5 fw-bold text-body-emphasis">Portfolio of Timothy Lewis</h1> 
+    <h2>Digital Strategist</h2>
     <div class="col-lg-6 mx-auto"> 
-        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p> 
+        <p class="lead mb-4">Driven and dedicated Digital Strategist with 25+ years of diverse experience, including developing and executing content and marketing strategies to deliver results. Highly skilled in overseeing analytics programs, creating and managing content, launching platforms, and optimizing for SEO. Adept at managing diverse teams and vendor relationships across global operations, ensuring exceptional digital communication.</p> 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button> 
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button> 
