--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="col-lg-6 mx-auto"> 
         <p class="lead mb-4">Driven and dedicated Digital Strategist with 25+ years of diverse experience, including developing and executing content and marketing strategies to deliver results. Highly skilled in overseeing analytics programs, creating and managing content, launching platforms, and optimizing for SEO. Adept at managing diverse teams and vendor relationships across global operations, ensuring exceptional digital communication.</p> 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button> 
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button> 
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Learn more about me</button> 
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact me</button> 
         </div> 
     </div> 
 </div>
