--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
 
 <div class="px-4 py-5 my-5 text-center"> 
-    <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> 
+    <img class="d-block mx-auto mb-4" src="/assets/images/timothy-lewis-headshot.jpg" alt="" width="72" height="57"> 
     <h1 class="display-5 fw-bold text-body-emphasis">Portfolio of Timothy Lewis</h1> 
     <h2>Digital Strategist</h2>
     <div class="col-lg-6 mx-auto"> 
