--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div class="container"> 
+<!-- <div class="container"> 
     <header class="d-flex justify-content-center py-3"> 
         <ul class="nav nav-pills"> 
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li> 
@@ -24,7 +24,7 @@
             <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li> 
             <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li> 
             <li class="nav-item"><a href="#" class="nav-link">About</a></li> 
-        </ul> </header> </div>
+        </ul> </header> </div> -->
     
 
 <div class="px-4 py-5 my-5 text-center">  
