--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> 
             <div class="col"> 
                 <div class="card shadow-sm"> 
-                    <svg aria-label="Placeholder: Thumbnail" class="bd-placeholder-img card-img-top" height="225" preserveAspectRatio="xMidYMid slice" role="img" width="100%" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> 
+                    <img src="/assets/images/chevron-vlcc-screen-capture.jpg" alt="" height="225" preserveAspectRatio="xMidYMid slice" role="img" width="100%" /> 
                     <div class="card-body"> 
                         <p class="card-text">This webpage was developed to celebrate the launch of a new fleet of VLCCs. Built in node.js and designed with the help of Elephant</p> 
                         <div class="d-flex justify-content-between align-items-center"> 
@@ -97,11 +97,11 @@ Call to action
             </div> 
             <h3 class="fs-2 text-body-emphasis">Featured title</h3> <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p> <a href="#" class="icon-link">
 Call to action
-<svg class="bi" aria-hidden="true"><use xlink:href="#chevron-right"></use></svg> </a> </div> </div> </div>
-   <h3>Projects</h3>
-   <a href="https://www.chevron.com/what-we-do/energy/transportation/shipping/vlcc"><img src="./assets/images/chevron-vlcc.png" /></a>
-   <a hred="https://www.chevron.com/what-we-do/energy/transportation/shipping/vlcc">View the Chevron VLCC experience</a>
-   <p>Built with ... this immersive digital expereince celebrated the launch of Chevron's new fleet of Very Large Crude Carriers (VLCC).</p>
+<svg class="bi" aria-hidden="true"><use xlink:href="#chevron-right"></use></svg> </a> 
+        </div> 
+        </div> 
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
