--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> 
             <div class="col"> 
                 <div class="card shadow-sm"> 
-                    <img src="/assets/images/chevron-vlcc-screen-capture.jpg" alt="" height="225" preserveAspectRatio="xMidYMid slice" role="img" width="100%" /> 
+                    <img src="./assets/images/chevron-vlcc-screen-capture.jpg" alt="" height="225" preserveAspectRatio="xMidYMid slice" role="img" width="100%" /> 
                     <div class="card-body"> 
                         <p class="card-text">This webpage was developed to celebrate the launch of a new fleet of VLCCs. Built in node.js and designed with the help of Elephant</p> 
                         <div class="d-flex justify-content-between align-items-center"> 
