--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="lead mb-4">Driven and dedicated Digital Strategist with 25+ years of diverse experience, including developing and executing content and marketing strategies to deliver results. Highly skilled in overseeing analytics programs, creating and managing content, launching platforms, and optimizing for SEO. Adept at managing diverse teams and vendor relationships across global operations, ensuring exceptional digital communication.</p> 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Learn more about me</button> 
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact me</button> 
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4"><a href="#form">Contact me</a></button> 
         </div> 
     </div> 
 </div>
@@ -101,6 +101,23 @@ Call to action
         </div> 
         </div> 
     </div>
+
+    <form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
