--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@ Call to action
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
         </div>
+
+<div class="row g-3">
+  <div class="col">
+    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+  </div>
+  <div class="col">
+    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+  </div>
+</div>
+        
+        
         </div>
 </form>
 
