--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div class="row py-lg-5"> 
         <div class="col-lg-6 col-md-8 mx-auto"> 
             <h2 class="fw-light">Work samples</h2> 
+            <h2 class="pb-2 border-bottom">Columns with icons</h2>
             <p class="lead text-body-secondary">Sharing some work sample highlights</p> 
             <p> <a href="#" class="btn btn-primary my-2">Main call to action</a> <a href="#" class="btn btn-secondary my-2">Secondary action</a> </p> 
         </div> 
@@ -104,6 +105,7 @@ Call to action
 
     <form>
         <div class="container">
+            <h2 class="pb-2 border-bottom">Columns with icons</h2>
             <div class="row g-3">
   <div class="col">
     <input type="text" class="form-control" placeholder="First name" aria-label="First name">
