--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@ Call to action
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+   <div class="col-12">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
 
 
 </div>
