--- a/index.html
+++ b/index.html
@@ -113,18 +113,14 @@ Call to action
               <div class="col">
                 <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
               </div>
-              <div class="mb-3">
+              <div class="col">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <label for="exampleInputPassword1" class="form-label">Comments</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
-              </div>
-              <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                <div id="emailHelp" class="form-text">Please enter your comments above.</div>
               </div>
             </div>
             <div class="col-12">
