--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Call to action
               <div class="col">
                 <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
               </div>
-              <div class="col">
+              <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               </div>
