--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     </div>
 
 
-<section class="py-5 text-center container"> 
+<!-- <section class="py-5 text-center container"> 
  
-</section>
+</section> -->
 
         
-    <div class="row py-lg-5 bg-body-tertiary"> 
+    <div class="row py-lg-5 text-center bg-body-tertiary"> 
         <div class="col-lg-6 col-md-8 mx-auto"> 
             <h2 class="fw-light">Work samples</h2> 
             <h2 class="pb-2 border-bottom">Columns with icons</h2>
