--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="col-lg-6 mx-auto"> 
             <p class="lead mb-4">Driven and dedicated Digital Strategist with diverse experience, including developing and executing marketing strategies to deliver results. Highly skilled in overseeing analytics programs, creating and managing content, launching platforms, and optimizing for SEO. Adept at managing diverse teams, projects of all sizes, and vendor relationships across global operations, ensuring exceptional digital communications.</p> 
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-                <a href="#samples" class="btn btn-primary btn-lg px-4 gap-3" role="button">See work samples</button> 
-                <a href="#contact" class="btn btn-outline-secondary btn-lg px-4"><a href="#contact">Contact me</a></button> 
+                <a href="#samples" class="btn btn-primary btn-lg px-4 gap-3" role="button">See work samples</a> 
+                <a href="#contact" class="btn btn-outline-secondary btn-lg px-4">Contact me</a> 
             </div> 
         </div> 
     </div>
