--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div> 
         </div> 
     </div>
-<div class="row py-lg-5 text-center bg-body-tertiary">
+<div class="row py-lg-5 text-center">
      <h2 class="fw-light">Skills</h2>
     <h2 class="pb-2 border-bottom">An exhaustive list ... </h2>
 <ul class="list-group list-group-horizontal">
