--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Call to action
 -->
     <form id="contact">
         <div class="container">
-            <h2 class="pb-2 border-bottom">Columns with icons</h2>
+            <h2 class="pb-2 border-bottom">Contact me</h2>
             <div class="row g-3">
               <div class="col">
                 <input type="text" class="form-control" placeholder="First name" aria-label="First name">
@@ -160,7 +160,7 @@ Call to action
               </div>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>        
         </div>
 </form>
