--- a/index.html
+++ b/index.html
@@ -40,36 +40,40 @@
 <div class="row py-lg-5 text-center">
      <h2 class="fw-light">Skills</h2>
 </div>
-<ul class="list-group list-group-horizontal">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-sm">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-md">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-lg">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-xl">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-xxl">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
+      One of three columns
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
+    </div>
+    <div class="col">
+      One of three columns
+          <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
+    </div>
+    <div class="col">
+      One of three columns
+          <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
+    </div>
+  </div>
+</div>
 <!-- <section class="py-5 text-center container"> 
  
 </section> -->
