--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="col">
       One of three columns
         <ul>
-            <li>1</li>
-            <li>2</li>
+            <li>People management</li>
+            <li>Diversity and inclusion</li>
             <li>3</li>
             <li>4</li>
             <li>5</li>
@@ -55,8 +55,8 @@
     <div class="col">
       One of three columns
           <ul>
-            <li>1</li>
-            <li>2</li>
+            <li>Search Engine Optimization (SEO)</li>
+            <li>Analytics</li>
             <li>3</li>
             <li>4</li>
             <li>5</li>
@@ -65,9 +65,9 @@
     <div class="col">
       One of three columns
           <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li>PI planning</li>
+            <li>Project and product planning</li>
+            <li>Agile</li>
             <li>4</li>
             <li>5</li>
         </ul>
