--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="row py-lg-5 text-center">
      <h2 class="fw-light">Skills</h2>
 </div>
-<div class="container text-center">
+<div class="container text-start">
   <div class="row align-items-start">
     <div class="col">
       One of three columns
