--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="col">
       One of three columns
           <ul>
-            <li>Search Engine Optimization (SEO)</li>
-            <li>Analytics</li>
+            <li>Search Engine Optimization (SEO) (Google Search Console, SEMRush)</li>
+            <li>Analytics (Google Analytics, Domo, </li>
             <li>3</li>
             <li>4</li>
             <li>5</li>
@@ -68,8 +68,9 @@
             <li>PI planning</li>
             <li>Project and product planning</li>
             <li>Agile</li>
-            <li>4</li>
-            <li>5</li>
+            <li>HTML and CSS</li>
+            <li>Content Management (Sitecore, Staffbase, Wordpress)</li>
+            <li>Email marketing (MailChimp, Marketo, Staffbase)</li>
         </ul>
     </div>
   </div>
