--- a/index.html
+++ b/index.html
@@ -45,32 +45,39 @@
     <div class="col">
       One of three columns
         <ul>
-            <li>People management</li>
+            <li>Agile methodology and planning</li>
+            <li>Analytics (Domo, Google, Marketo)</li>
+            <li>Content and digital strategy</li>
+            <li>Copy editing</li>
+            <li>Content management</li>
+            <li>Content management systems (Sitecore, Sharepoint, Staffbase, Wordpress)</li>
             <li>Diversity and inclusion</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
         </ul>
     </div>
     <div class="col">
-      One of three columns
+      Two of three columns
           <ul>
-            <li>Search Engine Optimization (SEO) (Google Search Console, SEMRush)</li>
-            <li>Analytics (Google Analytics, Domo, </li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-        </ul>
-    </div>
-    <div class="col">
-      One of three columns
-          <ul>
-            <li>PI planning</li>
-            <li>Project and product planning</li>
-            <li>Agile</li>
-            <li>HTML and CSS</li>
-            <li>Content Management (Sitecore, Staffbase, Wordpress)</li>
             <li>Email marketing (MailChimp, Marketo, Staffbase)</li>
+            <li>Governance (Content, Product)</li>
+            <li>HTML and CSS</li>
+            <li>Learning and development</li>
+            <li>People management</li>
+            <li>PI planning</li> 
+            <li>Program and project management</li>
+            
+            <li></li>
+        </ul>
+    </div>
+    <div class="col">
+      Three of three columns
+          <ul>
+            <li>Project and product planning</li>
+            <li>Search Engine Optimization (SEO) and Search Engine Marketing (SEM) (Google Search Console, SEMRush)</li>
+            <li>Social Media</li>
+            <li>Usability (UI/UX)</li>
+            <li>Teamwork and partnership</li>
+            <li>Training</li>
+            <li>Visual design and branding</li>
         </ul>
     </div>
   </div>
